--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node ./index.js"
   },
   "dependencies": {
+    "minimist": "^1.2.8",
     "puppeteer": "^22.2.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2"
